Updated GitHub action

--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -1,17 +1,18 @@
 env:
+    SQLITESTUDIO_BRANCH: 3.2
     QT_VERSION: '5.14.2'
-    QT_DIR: ${{ github.workspace }}/../Qt/${{ env.QT_VERSION }}/mingw73_64
+    QT_DIR: ${{ github.workspace }}/../Qt/5.14.2/mingw73_64
     MINGW_DIR: ${{ github.workspace }}/../Qt/Tools/mingw730_64
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
     MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw730/7.3.0-1x86_64-7.3.0-release-posix-seh-rt_v5-rev0.7z
     DEPS_URL: https://www.dropbox.com/s/9ulp1w82826966i/win64_deps.zip?dl=1
 
-name: 3.2 branch Windows build
+name: ${{ env.SQLITESTUDIO_BRANCH }} branch Windows build
 
 on:
     push:
         branches:
-            - 3.2
+            - ${{ env.SQLITESTUDIO_BRANCH }}
 
     repository_dispatch:
         types: [build_win64_snapshot]
@@ -49,7 +50,7 @@ jobs:
             - name: Clone repo
               uses: actions/checkout@v2
               with:
-                ref: 3.2
+                ref: ${{ env.SQLITESTUDIO_BRANCH }}
 
             - name: Install dependencies
               shell: bash
