--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -2,6 +2,7 @@ env:
     SQLITESTUDIO_BRANCH: 3.2
     QT_VERSION: '5.14.2'
     QT_DIR: ${{ github.workspace }}/../Qt/5.14.2/mingw73_64
+    QT_ARCH: 'win64_mingw73'
     MINGW_DIR: ${{ github.workspace }}/../Qt/Tools/mingw730_64
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
     MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw730/7.3.0-1x86_64-7.3.0-release-posix-seh-rt_v5-rev0.7z
@@ -35,7 +36,7 @@ jobs:
                 cached: ${{ steps.cache-qt.outputs.cache-hit }}
                 version: ${{ env.QT_VERSION }}
                 host: 'windows'
-                arch: 'win64_mingw73'
+                arch: ${{ QT_ARCH }}
                 dir: '${{ github.workspace }}\..'
                 modules: 'qtscript'
                 
@@ -56,7 +57,7 @@ jobs:
               shell: bash
               run: |
                 curl -L ${{ env.DEPS_URL }} --output ../win64_deps.zip
-                7z x -o".." ..\win64_deps.zip
+                7z x -o".." ../win64_deps.zip
                 echo "::add-path::${{ github.workspace }}/../lib"
  
             - name: Prepare output dir
