Updated GitHub action

--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -102,7 +102,7 @@ jobs:
                 echo 1
                 for f in Qt5Core Qt5Gui Qt5Network Qt5PrintSupport Qt5Script Qt5Svg Qt5Widgets Qt5Xml; do cp bin/$f.dll "${{ env.PORTABLE_DIR }}"; done
                 echo 2
-                cp bin/qt.conf ${{ env.PORTABLE_DIR }}
+                cp bin/qt.conf "${{ env.PORTABLE_DIR }}"
                 echo 3
                 mkdir "${{ env.PORTABLE_DIR }}/iconengines"
                 echo 4
