--- a/.github/workflows/3.2_win_debug.yml
+++ b/.github/workflows/3.2_win_debug.yml
@@ -7,15 +7,12 @@ env:
     MINGW_URL: https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw730/7.3.0-1x86_64-7.3.0-release-posix-seh-rt_v5-rev0.7z
     DEPS_URL: https://www.dropbox.com/s/9ulp1w82826966i/win64_deps.zip?dl=1
 
-name: 3.2 branch Windows build
+name: 3.2 branch Windows tests build
 
 on:
     push:
         branches:
             - 3.2
-
-    repository_dispatch:
-        types: [build_win64_snapshot]
 
 jobs:
     build:
@@ -79,49 +76,4 @@ jobs:
               shell: bash
               working-directory: output/SQLiteStudio
               run: for f in tst_*; do ./$f; done
-              
-            - name: Prepare portable dir
-              shell: bash
-              working-directory: output
-              run: |
-                mkdir portable
-                cp -R SQLiteStudio portable/
 
-            - name: Clean-up portable dir
-              shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}
-              run: |
-                rm -f *.a
-                rm -f plugins/*.a
-
-            - name: Prepare portable distro (Qt)
-              shell: bash
-              working-directory: ${{ env.Qt5_Dir }}
-              run: |
-                for f in Qt5Core Qt5Gui Qt5Network Qt5PrintSupport Qt5Script Qt5Svg Qt5Widgets Qt5Xml libgcc_s_seh-1 libstdc++-6 libwinpthread-1; do cp bin/$f.dll "${{ env.PORTABLE_DIR }}"; done
-                cp bin/qt.conf "${{ env.PORTABLE_DIR }}"
-                mkdir "${{ env.PORTABLE_DIR }}/iconengines"
-                mkdir "${{ env.PORTABLE_DIR }}/platforms"
-                mkdir "${{ env.PORTABLE_DIR }}/printsupport"
-                mkdir "${{ env.PORTABLE_DIR }}/styles"
-                mkdir "${{ env.PORTABLE_DIR }}/imageformats"
-                cp plugins/iconengines/qsvgicon.dll "${{ env.PORTABLE_DIR }}/iconengines"
-                cp plugins/platforms/qwindows.dll "${{ env.PORTABLE_DIR }}/platforms"
-                cp plugins/styles/qwindowsvistastyle.dll "${{ env.PORTABLE_DIR }}/styles"
-                cp plugins/printsupport/windowsprintersupport.dll "${{ env.PORTABLE_DIR }}/printsupport"
-                for f in qgif qicns qico qjpeg qsvg qtga qtiff qwbmp; do cp plugins/imageformats/$f.dll "${{ env.PORTABLE_DIR }}/imageformats"; done
-
-            - name: Prepare portable distro (Deps)
-              shell: bash
-              working-directory: ${{ github.workspace }}/../lib
-              run: cp *.dll "${{ env.PORTABLE_DIR }}"
-
-            - name: Assemble portable package
-              shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}
-              run: 7z a -r ../sqlitestudio-`./sqlitestudiocli.exe --version | cut -f 2 -d ' '`.zip .
-
-            - name: See results
-              shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}/..
-              run: ls -l
