--- a/.github/workflows/3.2_ubuntu_release.yml
+++ b/.github/workflows/3.2_ubuntu_release.yml
@@ -2,6 +2,7 @@ env:
     SQLITESTUDIO_BRANCH: 3.2
     QT_VERSION: '5.14.2'
     SQLITE_VERSION: '3310100'
+    SQLITE_RELEASE_YEAR: '2020'
     TCL_VERSION: '8.6'
     PORTABLE_DIR: ${{ github.workspace }}/output/portable/SQLiteStudio
 
@@ -40,7 +41,7 @@ jobs:
 
             - name: Install SQLite3
               run: |
-                wget http://sqlite.org/2018/sqlite-autoconf-$SQLITE_VERSION.tar.gz
+                wget http://sqlite.org/$SQLITE_RELEASE_YEAR/sqlite-autoconf-$SQLITE_VERSION.tar.gz
                 tar xzf sqlite-autoconf-$SQLITE_VERSION.tar.gz
                 cd sqlite-autoconf-$SQLITE_VERSION
                 ./configure --enable-fts5 --enable-json1 --enable-session
@@ -70,11 +71,11 @@ jobs:
                 qmake CONFIG+=portable ..\..\..\Plugins
                 make -j 2
               
-            # - name: Prepare portable dir
-              # working-directory: output
-              # run: |
-                # mkdir portable
-                # cp -R SQLiteStudio portable/
+            - name: Prepare portable dir
+              working-directory: output
+              run: |
+                mkdir portable
+                cp -R SQLiteStudio portable/
 
             # - name: Clean-up portable dir
               # working-directory: ${{ env.PORTABLE_DIR }}
