--- a/.github/workflows/3.2_win_release.yml
+++ b/.github/workflows/3.2_win_release.yml
@@ -113,16 +113,16 @@ jobs:
               working-directory: ${{ env.PORTABLE_DIR }}
               run: echo ::set-env name=SQLITESTUDIO_VERSION::$(./sqlitestudiocli.exe --version | cut -f 2 -d ' ')
 
-            - name: Assemble portable package
-              shell: bash
-              working-directory: ${{ env.PORTABLE_DIR }}/..
-              run: |
-                7z a -r sqlitestudio-$SQLITESTUDIO_VERSION.zip SQLiteStudio
-                pwd
-                ls -l
+            # - name: Assemble portable package
+              # shell: bash
+              # working-directory: ${{ env.PORTABLE_DIR }}/..
+              # run: |
+                # 7z a -r sqlitestudio-$SQLITESTUDIO_VERSION.zip SQLiteStudio
+                # pwd
+                # ls -l
 
             - name: Upload package artifact
               uses: actions/upload-artifact@v1
               with:
                 name: sqlitestudio-${{ env.SQLITESTUDIO_VERSION }}.zip
-                path: output/portable/sqlitestudio-${{ env.SQLITESTUDIO_VERSION }}.zip
+                path: output/portable/SQLiteStudio
