--- a/.github/workflows/3.2_ubuntu_release.yml
+++ b/.github/workflows/3.2_ubuntu_release.yml
@@ -54,7 +54,7 @@ jobs:
               
             - name: Install other tools/dependencies
               run: |
-                sudo apt install chrpath libreadline libreadline-dev 
+                sudo apt install chrpath libreadline-dev 
                 echo "::add-path::${{ github.workspace }}/../Qt/${{ env.QT_VERSION }}/gcc_64/bin"
  
             - name: Prepare output dir
